# starMon

./: .gitignore  Cargo.toml  NOTICE.md  README.md
crates/hp-wmi/: Cargo.toml
crates/hp-wmi/src/: bios.rs  data.rs  lib.rs  variant.rs
crates/pawnio-client/: Cargo.toml
crates/pawnio-client/src/: lib.rs
crates/starmon-app/: Cargo.toml  build.rs
crates/starmon-app/src/: fan_ctl.rs  fan_test.rs  hw.rs  logging.rs  main.rs  single_instance.rs  tray.rs
crates/starmon-core/: Cargo.toml
crates/starmon-core/src/: config.rs  fan.rs  history.rs  lib.rs  snapshot.rs
crates/starmon-hw/: Cargo.toml
crates/starmon-hw/src/: cpu.rs  ec.rs  ec_data.rs  lib.rs  mutex.rs
crates/starmon-metrics/: Cargo.toml
crates/starmon-metrics/src/: battery.rs  brightness.rs  disk.rs  lib.rs  network.rs  nvidia.rs  system.rs
