[package]
name = "hp-wmi"
description = "HP hpqBIntM WMI BIOS bridge and packed data structures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_System_Rpc",
] }
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true
