[package]
name = "pawnio-client"
description = "PawnIO kernel driver raw ioctl client (no PawnIOLib.dll dependency)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
] }
thiserror.workspace = true
