[package]
name = "starmon-app"
description = "StarMon desktop application: eframe GUI, tray and hardware sampler thread"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "starmon"
path = "src/main.rs"

[features]
# Son kullanıcı build'i UAC yükseltmesi ister (EC/MSR erişimi için gerekli).
# Geliştirmede yükseltmesiz çalıştırmak için: cargo build --no-default-features
default = ["elevated"]
elevated = []

[dependencies]
starmon-core = { path = "../starmon-core" }
starmon-metrics = { path = "../starmon-metrics" }
hp-wmi = { path = "../hp-wmi" }
starmon-hw = { path = "../starmon-hw" }
pawnio-client = { path = "../pawnio-client" }
arc-swap.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
egui.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-manifest.workspace = true
