[package]
name = "starmon-metrics"
description = "Driverless metrics: system, battery, network, disk, NVIDIA, brightness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
nvml-wrapper.workspace = true
wmi.workspace = true
serde.workspace = true
tracing.workspace = true
